--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>Success!  The your_domain virtual host is working!</h1>
+        <a href="gptvprint://gptvprint.gptv.vn"> Hello, world! </a>
     </body>
 </html>
