--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <title>Welcome to Your_domain!</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="HTML Deeplink print demo">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Tran Van Toan">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1>Success!  The your_domain virtual host is working!</h1>
