--- a/index.html
+++ b/index.html
@@ -1,5 +1,49 @@
 <html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="http://files.codepedia.info/uploads/iScripts/html2canvas.js"></script>
+    </head>
+    <body>
+        <div id="html-content-holder" style="background-color: #F0F0F1; color: #00cc65; width: 500px;padding-left: 25px; padding-top: 10px;">
+            <strong>Hello html2canvas</strong><hr/>
+            <h3 style="color: #3e4b51;">
+                Html to canvas, and canvas to proper image
+            </h3>
+            <p style="color: #3e4b51;">Hello html2canvas</p>
+        </div>
+        <input id="btn-Preview-Image" type="button" value="Preview"/>
+        <a id="btn-Convert-Html2Image" href="#">Download</a>
+        <br/>
+        <h3>Preview :</h3>
+        <div id="previewImage"></div>
+        <script>
+            $(document).ready(function(){
+            var element = $("#html-content-holder"); // global variable
+            var getCanvas; // global variable
+                $("#btn-Preview-Image").on('click', function () {
+                     html2canvas(element, {
+                     onrendered: function (canvas) {
+                            $("#previewImage").append(canvas);
+                            getCanvas = canvas;
+                         }
+                     });
+                });
+                $("#btn-Convert-Html2Image").on('click', function () {
+                var imgageData = getCanvas.toDataURL("image/png");
+                var newData = imgageData.replace(/^data:image\/png/, "data:application/octet-stream");
+                $("#btn-Convert-Html2Image").attr("download", "your_pic_name.png").attr("href", newData);
+                });
+
+            });
+        </script>
+    </body>
+</html>
+
+
+
+<!--
+<html>
+    <head>
         <title>Welcome to Your_domain!</title>
         <meta charset="UTF-8">
         <meta name="description" content="HTML Deeplink print demo">
@@ -12,3 +56,4 @@
         <a href="gptvprint://gptvprint.gptv.vn"> Hello, world! </a>
     </body>
 </html>
+-->
