--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
     <head>
+        <title>Welcome to Your_domain!</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="HTML Deeplink print demo">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Tran Van Toan">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="http://files.codepedia.info/uploads/iScripts/html2canvas.js"></script>
     </head>
