--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="http://files.codepedia.info/uploads/iScripts/html2canvas.js"></script>
+        <script type="text/javascript" src="html2canvas.min.js"></script>
     </head>
     <body>
         <div id="html-content-holder" style="background-color: #F0F0F1; color: #00cc65; width: 500px;padding-left: 25px; padding-top: 10px;">
