--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="html-content-holder" style="background-color: #F0F0F1; color: #00cc65; width: 500px;padding-left: 25px; padding-top: 10px;">
-            <strong>Hello html2canvas</strong><hr/>
+            <strong>Giải pháp Toàn Vẹn</strong><hr/>
             <h3 style="color: #3e4b51;">
                 Html to canvas, and canvas to proper image
             </h3>
