--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script type="application/javascript" src="html2canvas.min.js"></script>
+        <script src="html2canvas.min.js"></script>
     </head>
     <body>
         <div id="html-content-holder" style="background-color: #F0F0F1; color: #00cc65; width: 500px;padding-left: 25px; padding-top: 10px;">
-            <strong>Cty Giải pháp Toàn Vẹn</strong><hr/>
+            <strong>Giải pháp Toàn Vẹn</strong><hr/>
             <h3 style="color: #3e4b51;">
                 Html to canvas, and canvas to proper image
             </h3>
