--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <div id="html-content-holder" style="background-color: #F0F0F1; color: #00cc65; width: 500px;padding-left: 25px; padding-top: 10px;">
             <strong>Giải pháp Toàn Vẹn</strong><hr/>
             <h3 style="color: #3e4b51;">
-                Html to canvas, and canvas to proper image
+                Công ty TNHH Giải pháp Toàn Vẹn
+            </h3>
+            <h3 style="color: #3e4b51;">
+                Thạnh Phước - Giồng Riềng - Kiên Giang
             </h3>
             <p style="color: #3e4b51;">Hello html2canvas</p>
         </div>
