--- a/gptv_print_json.html
+++ b/gptv_print_json.html
@@ -7,6 +7,7 @@ const gptvPrint = {
     {
       "type": "qr",
       "text": "gptv.vn",
+      "align": "center",
       "font": "RobotoCondensed",
       "size": 8,
       "bold": false,
@@ -21,8 +22,24 @@ const gptvPrint = {
     {
       "type": "text",
       "text": "Trần Văn Toàn",
+      "align": "center",
       "font": "RobotoCondensed",
       "size": 20,
+      "bold": false,
+      "italic": false,
+      "underline": false,
+      "rotate": 0,
+      "width": 0,
+      "height": 0,
+      "top": 10,
+      "left": 0
+    },
+    {
+      "type": "text",
+      "text": "(Right) Trần Văn Toàn",
+      "align": "right",
+      "font": "RobotoCondensed",
+      "size": 30,
       "bold": false,
       "italic": false,
       "underline": false,
