--- a/web_print.html
+++ b/web_print.html
@@ -10,6 +10,13 @@
             padding: 0; margin: 0;
             font-size: 12px;
         }
+        
+        @page{
+margin-left: 0px;
+margin-right: 0px;
+margin-top: 0px;
+margin-bottom: 0px;
+}
 
     </style>
 </head>
