--- a/web_print.html
+++ b/web_print.html
@@ -7,16 +7,9 @@
       
     <style>
         html{
-            padding: 0; margin: 0;
+            padding: 0px; margin: 0px;
             font-size: 12px;
         }
-        
-        @page{
-margin-left: 0px;
-margin-right: 0px;
-margin-top: 0px;
-margin-bottom: 0px;
-}
 
     </style>
 </head>
