--- a/web_print.html
+++ b/web_print.html
@@ -6,6 +6,8 @@
     <title>Thu tại quầy (mobile)</title>
       
     <style>
+    *{margin:0px; padding:0px}
+    body,
         html{
             padding: 0px; margin: 0px;
             font-size: 12px;
